<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="assignment02.csc214.project2.Profile.UpdateProfileFragment">

    <LinearLayout android:focusable="true"
                  android:focusableInTouchMode="true"
                  android:layout_width="0px"
                  android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mycustom_boarder">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f9f9f5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="700dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/UpdateProfile_TitletextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/update_profile_tile"
                        android:textColor="#344997"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:typeface="sans"/>

                    <ImageView
                        android:id="@+id/UpdateProfile_ProfilePixImageView"
                        android:layout_width="151dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:src="@mipmap/empty_profile_image"/>

                    <Button
                        android:id="@+id/UpdateProfile_UploadImageButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="151dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="#383833"
                        android:text="@string/change_pic"
                        android:textColor="#ffffff"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/UpdateProfile_FullNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/full_name"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="#070707"/>

                        <EditText
                            android:id="@+id/UpdateProfile_FullNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/enter_full_name"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/UpdateProfile_DateOfBirthTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_birth"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="#070707"/>

                        <EditText
                            android:id="@+id/UpdateProfile_DateOfBirthEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/enter_mm_dd_yyy"
                            android:inputType="date"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/UpdateProfile_HomeTownTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home_town"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="#070707"/>

                        <EditText
                            android:id="@+id/UpdateProfile_HomeTownEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/enter_home_town"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/UpdateProfile_BioTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/biography"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="#070707"
                        android:layout_marginStart="90dp"/>

                    <EditText
                        android:id="@+id/UpdateProfile_BioEditText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:lines="6"
                        android:background="@drawable/mycustom_boarder"
                        android:hint="@string/enter_a_short_biography"/>

                    <Button
                        android:id="@+id/UpdateProfile_UpdateButton"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/update_profilebuttontext"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/buttonshapes"/>


                </LinearLayout>



        </RelativeLayout>

    </ScrollView>

</FrameLayout>
