<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="assignment02.csc214.project2.Account.LoginFragment">

    <LinearLayout android:focusable="true"
                  android:focusableInTouchMode="true"
                  android:layout_width="0px"
                  android:layout_height="0px" >
        <requestFocus />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="347dp"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="119dp"
            android:background="@drawable/mycustom_boarder"
            android:backgroundTint="#284499"
            android:backgroundTintMode="src_over"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/home_action_icon"/>


                <TextView
                    android:id="@+id/Login_logoTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/umbrella_network"
                    android:textColor="#0697f1"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Login_usernameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="#f7f4f3"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/Login_usernameEditText"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/enter_username"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Login_passwordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="#f7f4f3"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/Login_passwordEditText"
                    android:layout_width="190dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"/>

            </LinearLayout>

            <TextView
                android:id="@+id/Login_forgotPasswordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="130dp"
                android:layout_marginTop="5dp"
                android:text="@string/forgot_password"
                android:textColor="#f7f4f3"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/Login_button"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="30dp"
                    android:background="@drawable/buttonshapes"
                android:text="@string/login"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/Login_createAccountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"
                android:text="@string/login_create_account"
                android:textColor="#f7f4f3"
                android:textSize="20sp"
                android:textStyle="bold"/>


        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
