<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="assignment02.csc214.project2.Social_Network.ViewUserFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mycustom_boarder">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f9f9f5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/UpdateProfile_TitletextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="User Full Name"
                android:textColor="#344997"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="sans"/>

            <ImageView
                android:id="@+id/ViewUserProfile_ProfilePixImageView"
                android:layout_width="140dp"
                android:layout_height="127dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@mipmap/empty_profile_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/ViewUserProfile_FullNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#070707"/>

                <TextView
                    android:id="@+id/ViewProfile_FullNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Kennedy Agusi"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/ViewProfile_DateOfBirthTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#070707"/>

                <TextView
                    android:id="@+id/ViewProfile_DateOfBirthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="04/10/1995"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/ViewUserProfile_HomeTownTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_town"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="#070707"/>

                <TextView
                    android:id="@+id/ViewUserProfile_HomeTownEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="Washington"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/ViewUserProfile_BioTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/biography"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#070707"
                android:layout_marginStart="100dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/ViewUserProfile_BioEditText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lines="6"
                android:background="@drawable/mycustom_boarder"/>


        </LinearLayout>



    </RelativeLayout>

</ScrollView>

</FrameLayout>
